--- a/project/html/pages/about.ejs
+++ b/project/html/pages/about.ejs
@@ -7,9 +7,9 @@
   <!-- the classes 'page-header' and 'btn btn-dark' create bootstrap components.  -->
   <!-- Check out more components here: http://getbootstrap.com/components/ -->
   <div class="page-header">
-	<% include ../helpers/navbar %>
+
   
-    <h1>Somebody made this cool site!</h1>
+    <h1>About me</h1>
   </div>
 
   <p>Click on the button for a surprise.</p>
@@ -17,12 +17,6 @@
   <button onClick="showPicture()" class="btn btn-dark">Click me</button>
 
   <div id="image"></div>
-  
-  <div class="city">
-  </div>
-  
-  <div class="temp">
-  </div>
   
 </body>
 
