--- a/project/html/helpers/head.ejs
+++ b/project/html/helpers/head.ejs
@@ -25,5 +25,31 @@
 
 <script>var apiKey="<%=process.env.API_KEY %>";</script>
 
+
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/6.4.0/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#config-web-app -->
+<script src="https://www.gstatic.com/firebasejs/6.4.0/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/6.4.0/firebase-database.js"></script>
+
+
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "<%= process.env.FIREBASE_API_KEY %>",
+    authDomain: "message-stream-a26d7.firebaseapp.com",
+    databaseURL: "https://message-stream-a26d7.firebaseio.com",
+    projectId: "message-stream-a26d7",
+    storageBucket: "message-stream-a26d7.appspot.com",
+    messagingSenderId: "327333235219",
+    appId: "1:327333235219:web:40921976ae2e3a46"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
+
 <!-- then our app's own js file -->
 <script src="js/main.js"></script>
